# data-technos

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_pipeline.yml
src/tech_watch/: config.py  email_sender.py  main.py  searcher.py  storage.py  summarizer.py
tests/: test_searcher.py  test_storage.py  test_summarizer.py
