[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-watch"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "google-genai>=1.0.0",
    "langdetect>=1.0.9",
    "trafilatura>=2.0.0",
    "feedparser>=6.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.126.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
